docs/training/istio/artifacts/sidecar-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: istio-system
spec:
  egress:
  - hosts:
    # See everything on my namespace
    - "./*"
    # See everything on istio-system ns
    - "istio-system/*"
